후처리, secured, runas